fix: adjust team text

--- a/_posts/2023-03-03-award.md
+++ b/_posts/2023-03-03-award.md
@@ -1,6 +1,6 @@
 ---
-title: Award
-tags: awards
+title: 2nd place in Location Intelligence for Smart Cities
+tags: awards hackathon
 ---
 
 Write about the 2nd place in Location Intelligence for Smart Cities Hackathon.
