feat: add posts

--- a/_posts/2023-03-03-award.md
+++ b/_posts/2023-03-03-award.md
@@ -1,11 +1,17 @@
 ---
-title: 2nd place in Location Intelligence for Smart Cities
+title: SPADE project awarded at Location Intelligence for Smart Cities Hackathon
 tags: awards hackathon
 ---
 
-Write about the 2nd place in Location Intelligence for Smart Cities Hackathon.
+SPADE won second place in the Location Intelligence for Smart Cities Hackathon.
+
 <!--more-->
 
 ---
+![Leipzig](/img/award_location_hackathon.jpeg)
 
-The solution aimed to tackle the problem of heavy rainfall in urban areas and its impact on communities and cities.
+Our project was centered around addressing the challenges of heavy rainfall in urban environments and its subsequent effects on communities and cities.
+
+Our creation, SPADE (Simulator for Predicting Accumulation and Drainage through Elevation), is designed to analyze terrain elevation and surface permeability. This analysis helps in determining the paths of rainwater drainage and identifying flood-prone areas. SPADE uses aerial imagery, Digital Terrain Models (DTM), and a simulation algorithm to generate an interactive map. This map displays the course of water during intense rainfall events.
+
+Looking ahead, we are excited to present SPADE at DataWeek.de in Leipzig. Our goal is to continue making a meaningful impact with our solution in the realm of urban flood management.
