--- a/_posts/2023-06-30-dataweek.md
+++ b/_posts/2023-06-30-dataweek.md
@@ -1,14 +1,16 @@
 ---
-title: Data Week Liepzig 2023
-tags: awards conference presentation
-article_header:
-  type: cover
-  image:
-    src: /screenshot.jpg
+title: SPADE team presents its solution in Leipzig
+tags: presentation
 ---
 
-Post about presentation in Liepzig
-
+Pioneering Urban Flood Prevention: SPADE's Highlight at DataWeek.de
 <!--more-->
 
-Details...
+---
+![Leipzig](/img/Leipzig.jpeg)
+
+On June 27, 2023, two key members of our team, Armando Dauer and Tiago Tamagusko, journeyed to Leipzig to participate in DataWeek.de. This event provided an exceptional platform to present our innovative solution, SPADE, an acronym for "Simulator for Predicting Accumulation and Drainage through Elevation." Our vision with SPADE is to significantly enhance the way cities approach and manage flood risks.
+
+We extend our heartfelt gratitude to the organizing committee for orchestrating such a well-managed event. Our special appreciation also goes to Dr. Antti Jakobsson from the Maanmittauslaitos, National Land Survey of Finland, for his invaluable support.
+
+As we progress, our excitement only grows stronger. We are committed to further developing SPADE and playing a pivotal role in fostering smarter, safer urban environments. Keep an eye out for more updates!
