fix: image path at posts

--- a/_posts/2023-03-03-award.md
+++ b/_posts/2023-03-03-award.md
@@ -8,7 +8,8 @@ SPADE won second place in the Location Intelligence for Smart Cities Hackathon.
 <!--more-->
 
 ---
-![Leipzig](/img/award_location_hackathon.jpeg)
+
+![Award](https://raw.githubusercontent.com/tamagusko/spade/main/img/award_location_hackathon.jpeg)
 
 Our project was centered around addressing the challenges of heavy rainfall in urban environments and its subsequent effects on communities and cities.
 
