--- a/_posts/2023-06-30-dataweek.md
+++ b/_posts/2023-06-30-dataweek.md
@@ -7,7 +7,7 @@ Pioneering Urban Flood Prevention: SPADE's Highlight at DataWeek.de
 <!--more-->
 
 ---
-![Leipzig](/img/Leipzig.jpeg)
+![Leipzig](https://raw.githubusercontent.com/tamagusko/spade/main/img/Leipzig.jpeg)
 
 On June 27, 2023, two key members of our team, Armando Dauer and Tiago Tamagusko, journeyed to Leipzig to participate in DataWeek.de. This event provided an exceptional platform to present our innovative solution, SPADE, an acronym for "Simulator for Predicting Accumulation and Drainage through Elevation." Our vision with SPADE is to significantly enhance the way cities approach and manage flood risks.
 
